Bug-fixes